@@ -12,7 +12,7 @@ repos:
         args: [--fix=lf]
 
   - repo: https://github.com/python/black
-    rev: 22.6.0
+    rev: 22.8.0
     hooks:
       - id: black
         language_version: python3
@@ -47,6 +47,6 @@ repos:
 #        args: [--ignore-directives=automodule]
 
   - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v1.20.2
+    rev: v2.0.0
     hooks:
       - id: setup-cfg-fmt
