@@ -29,6 +29,7 @@ from holidays.holiday_base import *  # * import required for IDE docstrings
 from holidays.utils import (
     CountryHoliday,
     country_holidays,
+    financial_holidays,
     list_supported_countries,
     list_supported_financial,
 )
