@@ -22,7 +22,7 @@ class EuropeanCentralBank(HolidayBase):
     # https://en.wikipedia.org/wiki/TARGET2
     # http://www.ecb.europa.eu/press/pr/date/2000/html/pr001214_4.en.html
 
-    country = "ECB"
+    market = "ECB"
 
     def __init__(self, **kwargs):
         HolidayBase.__init__(self, **kwargs)
